--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -1,5 +1,5 @@
 {
-  "Home": "Start",
+  "Home": "Startseite",
   "Browse": "Durchsuchen",
   "Library": "Mediathek",
   "Tracks": "Songs",
@@ -9,7 +9,7 @@
   "More": "Mehr",
   "Settings": "Einstellungen",
   "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Suche oder füge eine Deezer URL ein. Benutze \"/\" um schnell zu fokussieren.",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Suchen oder Deezer URL einfügen. Benutze \"/\", um schnell zu fokussieren.",
   "Play": "Wiedergeben",
   "Add to library": "Zur Mediathek hinzufügen",
   "Download": "Download",
@@ -27,7 +27,7 @@
   "Sort by": "Sortieren nach",
   "Date Added": "Hinzugefügt am",
   "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Künstler*innen (A-Z)",
+  "Artist (A-Z)": "Künstler*in (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
   "Error loading lyrics or lyrics not found!": "Fehler beim Laden der Songtexte bzw. Songtexte nicht gefunden!",
   "Create playlist": "Playlist erstellen",
@@ -54,7 +54,7 @@
   "Downloaded": "Heruntergeladen",
   "Queue": "Wiedergabeliste",
   "Total": "Gesamt",
-  "Stop": "Stop",
+  "Stop": "Stopp",
   "Start": "Start",
   "Show folder": "Ordner anzeigen",
   "Clear queue": "Warteschleife löschen",
@@ -66,12 +66,12 @@
   "Explicit": "Explizit",
   "Source": "Quelle",
   "ID": "ID",
-  "Error logging in!": "Fehler beim einloggen!",
+  "Error logging in!": "Fehler beim Einloggen!",
   "Please try again later, or try another account.": "Bitte versuche es später noch einmal oder versuche es mit einem anderen Konto.",
   "Logout": "Abmelden",
   "Login using browser": "Anmeldung über Browser",
   "Please login using your Deezer account:": "Bitte melde dich mit deinem Deezer-Konto an:",
-  "...or paste your ARL/Token below:": "...oder füge dein ARL/Token unten ein:",
+  "...or paste your ARL/Token below:": "...oder füge deine ARL/deinen Token unten ein:",
   "ARL/Token": "ARL/Token",
   "Login": "Anmeldung",
   "By using this program, you disagree with Deezer's ToS.": "Durch die Verwendung dieses Programms lehnst du die Nutzungsbedingungen von Deezer ab.",
@@ -88,24 +88,24 @@
   "Show download dialog": "Download-Dialog anzeigen",
   "Create folders for artists": "Ordner für Künstler*innen erstellen",
   "Create folders for albums": "Ordner für Alben erstellen",
-  "Download lyrics": "Download Lyrics",
+  "Download lyrics": "Lyrics herunterladen",
   "Variables": "Variablen",
   "UI": "Benutzeroberfläche",
   "Show autocomplete in search": "Auto-Vervollständigung in der Suche anzeigen",
   "Integrations": "Integrationen",
   "This allows listening history, flow and recommendations to work properly.": "Dies ermöglicht, dass der Wiedergabeverlauf, Flow und Empfehlungen korrekt funktionieren.",
-  "Log track listens to Deezer": "Prokotolliere gehörte Titel auf Deezer",
+  "Log track listens to Deezer": "Prokotolliere gehörte Songs auf Deezer",
   "Connect your LastFM account to allow scrobbling.": "Verbinde dein LastFM-Konto, um das Scrobbling zu erlauben.",
   "Login with LastFM": "Anmelden mit LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
+  "Disconnect LastFM": "LastFM trennen",
   "Requires restart to apply!": "Erfordert einen Neustart der App!",
   "Enable Discord Rich Presence, requires restart to toggle!": "Discord Rich Presence aktivieren, erfordert einen Neustart zum Umschalten!",
   "Discord Rich Presence": "Discord Rich Presence",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Aktiviere Discord Join für die Synchronisierung von Titel, benötigt einen Neustart zum Umschalten!",
   "Discord Join Button": "Discord Join Button",
   "Other": "Andere",
-  "Minimize to tray": "In Statusleiste minimieren",
-  "Don't minimize to tray": "Nicht in Statusleiste minimieren",
+  "Minimize to tray": "In die Statusleiste minimieren",
+  "Don't minimize to tray": "Nicht in die Statusleiste minimieren",
   "Close on exit": "Beim Beenden schließen",
   "Settings saved!": "Einstellungen gespeichert!",
   "Available only in Electron version!": "Nur in der Electron-Version verfügbar!",
@@ -116,14 +116,14 @@
   "About": "Über",
   "Links:": "Links:",
   "Telegram Releases": "Telegram Veröffentlichungen",
-  "Telegram Group": "Telegram Gruppe",
+  "Telegram Group": "Telegram-Gruppe",
   "Discord": "Discord",
   "Telegram Android Group": "Telegram Android-Gruppe",
   "Credits:": "Credits:",
   "Agree": "Einverstanden",
   "Dismiss": "Verwerfen",
   "Added to playlist!": "Zur Playlist hinzugefügt!",
-  "Added to library!": "Zur Mediathek hinzufügt!",
+  "Added to library!": "Zur Mediathek hinzugefügt!",
   "Removed from library!": "Aus der Mediathek entfernt!",
   "Removed from playlist!": "Aus der Playlist entfernt!",
   "Playlist deleted!": "Playlist gelöscht!",
@@ -134,8 +134,24 @@
   "Share": "Teilen",
   "Settings quality": "Audioqualität-Einstellungen",
   "Content language": "Sprache der Inhalte",
-  "Content country": "Land des Inhalts",
+  "Content country": "Land der Inhalte",
   "Website": "Webseite",
   "Visit website": "Webseite besuchen",
-  "New update available:": "Neues Update verfügbar:"
+  "New update available:": "Neues Update verfügbar:",
+  "Shuffle": "Zufällige Wiedergabe",
+  "Download album cover": "Albumcover herunterladen",
+  "Art Resolution": "Auflösung der Albumcover",
+  "Public": "Öffentlich",
+  "Private": "Privat",
+  "Collaborative": "Zusammen",
+  "Edit playlist": "Playlist bearbeiten",
+  "Save": "Speichern",
+  "Edit": "Bearbeiten",
+  "Importer": "Importer",
+  "Enter URL": "Enter URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
+  "Import into playlist": "Import into playlist",
+  "Keep sidebar open": "Keep sidebar open",
+  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
+  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported."
 }
