--- a/app/client/src/locales/ast.json
+++ b/app/client/src/locales/ast.json
@@ -1,141 +1,157 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
+  "Home": "Aniciu",
+  "Browse": "Restolar",
+  "Library": "Biblioteca",
+  "Tracks": "Pistes",
+  "Playlists": "Llistes",
+  "Albums": "Álbumes",
+  "Artists": "Artistes",
+  "More": "Más",
+  "Settings": "Axustes",
+  "Downloads": "Descargues",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Busca o apiega una URL de Deezer. Usa «/» pa enfocar aína esta barra.",
+  "Play": "Reproducir",
+  "Add to library": "Amestar a la biblioteca",
+  "Download": "Baxar",
+  "fans": "siguidores",
+  "tracks": "pistes",
+  "Quality": "Calidá",
+  "Estimated size:": "Tamañu estimáu:",
+  "Start downloading": "Aniciar la descarga",
+  "Cancel": "Encaboxar",
+  "Stream logging is disabled!": "¡El rexistru de tresmisiones ta desactiváu!",
+  "Enable it in settings for history to work properly.": "Actívalu nos axustes pa que l'historial funcione afayadizamente.",
+  "History": "Historial",
+  "Create new playlist": "Crear una llista",
+  "TRACKS": "PISTES",
+  "Sort by": "Ordenar por",
+  "Date Added": "Data d'amiestu",
+  "Name (A-Z)": "Nome (A-Z)",
+  "Artist (A-Z)": "Artista (A-Z)",
+  "Album (A-Z)": "Álbum (A-Z)",
+  "Error loading lyrics or lyrics not found!": "¡Hebo un fallu al cargar la lletra o nun s'atopó!",
+  "Create playlist": "Creación d'una llista",
+  "Create": "Crear",
+  "Add to playlist": "Amestar a una llista",
+  "Create new": "Crear una",
+  "Remove": "Quitar",
+  "Play next": "Reproducir darréu",
+  "Add to queue": "Amestar a la cola",
+  "Remove from library": "Quitar de la biblioteca",
+  "Remove from playlist": "Quitar de la llista",
+  "Play track mix": "Reproducir el mecíu de pistes",
+  "Go to": "Dir a",
+  "Track Mix": "Mecíu de pistes",
+  "Duration": "Duración",
+  "Released": "Data de llanzamientu",
+  "Disk": "Discu",
+  "albums": "álbumes",
+  "Play top": "Reproducir lo destacao",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Show all albums": "Amosar tolos álbumes",
+  "Show all singles": "Amosar tolos singles",
+  "Show more": "Amosar más",
+  "Downloaded": "Baxó",
+  "Queue": "Cola",
+  "Total": "En total",
+  "Stop": "Parar",
+  "Start": "Aniciar",
+  "Show folder": "Amosar la carpeta",
+  "Clear queue": "Llimpiar la cola",
+  "Playing from": "Reproduciendo dende",
+  "Info": "Información",
+  "Lyrics": "Lletra",
+  "Track number": "Númberu de la pista",
+  "Disk number": "Númberu del discu",
+  "Explicit": "+18",
+  "Source": "Orixe",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
-  "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
+  "Error logging in!": "¡Hebo un fallu al aniciar sesión!",
+  "Please try again later, or try another account.": "Volvi tentalo dempués o prueba con otra cuenta, por favor.",
+  "Logout": "Zarrar sesión",
+  "Login using browser": "Aniciar sesión col restolador",
+  "Please login using your Deezer account:": "Usa la to cuenta de Deezer…",
+  "...or paste your ARL/Token below:": "…o apiega la ARL/pase embaxo:",
+  "ARL/Token": "ARL/Pase",
+  "Login": "Aniciar sesión",
+  "By using this program, you disagree with Deezer's ToS.": "Col usu d'esti programa refugues los Términos del Serviciu de Deezer.",
+  "Only in Electron version!": "¡Namás na versión d'Electron!",
+  "Search results for:": "Resultaos pa la busca de:",
+  "Error loading data!": "¡Hebo un fallu al cargar los datos!",
+  "Try again later!": "¡Volvi tentalo dempués!",
+  "Search": "Buscar",
+  "Streaming Quality": "Calidá de les tresmisiones",
+  "Download Quality": "Calidá de les descargues",
+  "Downloads Directory": "Direutoriu de les descargues",
+  "Simultaneous downloads": "Descargues simultánees",
+  "Always show download confirm dialog before downloading.": "Amosar siempres el diálogu de confirmación de les descargues enantes de baxar.",
+  "Show download dialog": "Amosar el diálogu de descarga",
+  "Create folders for artists": "Crear carpetes pa los artistes",
+  "Create folders for albums": "Crear carpetes pa los álbumes",
+  "Download lyrics": "Baxar les lletres",
   "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
-  "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!",
-  "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "UI": "IU",
+  "Show autocomplete in search": "Amosar el completáu automáticu na busca",
+  "Integrations": "Integraciones",
+  "This allows listening history, flow and recommendations to work properly.": "Esto permite que l'historial, fluxu y recomendaciones d'escuches funciones afayadizamente.",
+  "Log track listens to Deezer": "Rexistrar les pistes sentíes en Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Conecta la to cuenta de LastFM pa permitir la sincronización de pistes.",
+  "Login with LastFM": "Aniciar sesión en LastFM",
+  "Disconnect LastFM": "Desconectase de LastFM",
+  "Requires restart to apply!": "¡Rique'l reaniciu p'aplicar!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Activa la presencia arriquecida de de Discord. ¡Rique reaniciar l'aplicación p'alternar!",
+  "Discord Rich Presence": "Presencia arriquecida de Discord",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activa'l botón de xunión de Discord pa sincronizar pistes. ¡Rique reaniciar l'aplicación p'alternar!",
+  "Discord Join Button": "Botón de xunión de Discord",
+  "Other": "Otres opciones",
+  "Minimize to tray": "Minimizar a la bandexa",
+  "Don't minimize to tray": "Nun minimiza a la bandexa",
+  "Close on exit": "Zarrar al colar",
+  "Settings saved!": "¡Guardáronse los axustes!",
+  "Available only in Electron version!": "¡Namás disponible na versión d'Electron!",
+  "Crossfade (ms)": "Transición (ms)",
+  "Select primary color": "Esbillar el color primariu",
+  "Light theme": "Estilu claru",
+  "Create folders for playlists": "Crear carpetes pa les llistes",
+  "About": "Tocante a",
+  "Links:": "Enllaces:",
+  "Telegram Releases": "Llanzamientos en Telegram",
+  "Telegram Group": "Grupu de Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Telegram Android Group": "Grupu d'Android en Telegram",
+  "Credits:": "Creitos:",
+  "Agree": "Acepto",
+  "Dismiss": "Escartar",
+  "Added to playlist!": "¡Amestóse a la llista!",
+  "Added to library!": "¡Amestóse a la biblioteca!",
+  "Removed from library!": "¡Quitóse de la biblioteca!",
+  "Removed from playlist!": "¡Quitóse de la llista!",
+  "Playlist deleted!": "¡Desanicióse la llista!",
+  "Delete": "Desaniciar",
+  "Are you sure you want to delete this playlist?": "¿De xuru que quies desaniciar esta llista?",
+  "Force white tray icon": "Forciar l'iconu de la bandexa blancu",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forcia l'iconu (blancu) predetermináu de la bandexa si nun se detecta correutamente l'estilu. Rique'l reaniciu.",
+  "Share": "Compartir",
+  "Settings quality": "Axustes de la calidá",
+  "Content language": "Llingua del conteníu",
+  "Content country": "País del conteníu",
+  "Website": "Sitiu web",
+  "Visit website": "Visitar el sitiu web",
+  "New update available:": "Anovamientu disponible:",
+  "Shuffle": "Al debalu",
+  "Download album cover": "Baxar la portada de los álbumes",
+  "Art Resolution": "Resolución",
+  "Public": "Pública",
+  "Private": "Privada",
+  "Collaborative": "En comuña",
+  "Edit playlist": "Edición d'una llista",
+  "Save": "Guardar",
+  "Edit": "Editar",
+  "Importer": "Importador",
+  "Enter URL": "Introduz una URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Anguaño namás se sofita Spotify y con una llende de 100 pistes.",
+  "Import into playlist": "Importar a una llista",
+  "Keep sidebar open": "Caltner la barra llateral abierta",
+  "WARNING: Might require reload to work properly!": "ALVERTENCIA: ¡Reanicia l'aplicación pa que funcione afayadizamente!",
+  "An error occured, URL might be invalid or unsupported.": "Asocedió un fallo, quiciabes la URL nun seya válida o nun se sofite."
 }
