--- a/app/client/src/locales/fa.json
+++ b/app/client/src/locales/fa.json
@@ -137,5 +137,21 @@
   "Content country": "Content country",
   "Website": "Website",
   "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "New update available:": "New update available:",
+  "Shuffle": "Shuffle",
+  "Download album cover": "Download album cover",
+  "Art Resolution": "Art Resolution",
+  "Public": "Public",
+  "Private": "Private",
+  "Collaborative": "Collaborative",
+  "Edit playlist": "Edit playlist",
+  "Save": "Save",
+  "Edit": "Edit",
+  "Importer": "Importer",
+  "Enter URL": "Enter URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
+  "Import into playlist": "Import into playlist",
+  "Keep sidebar open": "Keep sidebar open",
+  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
+  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported."
 }
