--- a/app/client/src/locales/fr.json
+++ b/app/client/src/locales/fr.json
@@ -137,5 +137,21 @@
   "Content country": "Pays du contenu",
   "Website": "Site internet",
   "Visit website": "Visiter le site internet",
-  "New update available:": "Nouvelle mise à jour disponible :"
+  "New update available:": "Nouvelle mise à jour disponible :",
+  "Shuffle": "Mode aléatoire",
+  "Download album cover": "Télécharger la pochette de l'album",
+  "Art Resolution": "Résolution",
+  "Public": "Publique",
+  "Private": "Privée",
+  "Collaborative": "Collaborative",
+  "Edit playlist": "Editer la playlist",
+  "Save": "Enregistrer",
+  "Edit": "Éditer",
+  "Importer": "Importer",
+  "Enter URL": "Entrer l'URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Actuellement, seul Spotify est pris en charge et limité à 100 titres.",
+  "Import into playlist": "Importer dans la playlist",
+  "Keep sidebar open": "Garder le panneau latéral ouvert",
+  "WARNING: Might require reload to work properly!": "AVERTISSEMENT : Il peut être nécessaire de recharger pour fonctionner correctement !",
+  "An error occured, URL might be invalid or unsupported.": "Une erreur est survenue, l'URL est peut-être invalide ou non prise en charge."
 }
