--- a/app/client/src/locales/hu.json
+++ b/app/client/src/locales/hu.json
@@ -39,103 +39,119 @@
   "Add to queue": "Hozzáadás a várólistához",
   "Remove from library": "Eltávolítás a könyvtárból",
   "Remove from playlist": "Eltávolítás a lejátszási listáról",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
+  "Play track mix": "Dal Mix lejátszása",
+  "Go to": "Menjen",
+  "Track Mix": "Dal Mix",
+  "Duration": "Időtartam",
+  "Released": "Kiadva",
+  "Disk": "Lemez",
+  "albums": "albumok",
+  "Play top": "Legfelső lejátszása",
+  "Radio": "Rádió",
+  "Show all albums": "Összes album megjelenítése",
   "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
+  "Show more": "Több megjelenítése",
+  "Downloaded": "Letöltött",
+  "Queue": "Várólista",
+  "Total": "Összes",
+  "Stop": "Megállít",
+  "Start": "Elindít",
+  "Show folder": "Mappa megjelenítése",
+  "Clear queue": "Várólista kiürítése",
+  "Playing from": "Lejátszva",
+  "Info": "Infrmáció",
   "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
+  "Track number": "Dal (sor)száma",
+  "Disk number": "Lemez száma",
   "Explicit": "Explicit",
-  "Source": "Source",
-  "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Source": "Forrás",
+  "ID": "Azonosító",
+  "Error logging in!": "Hiba történt bejelentkezéskor!",
+  "Please try again later, or try another account.": "Kérjük próbálja újra, vagy próbáljon egy másik fiókot.",
+  "Logout": "Kijelentkezés",
+  "Login using browser": "Belépés böngészővel",
+  "Please login using your Deezer account:": "Kérjük lépjen be Deezer fiókjával:",
+  "...or paste your ARL/Token below:": "... vagy illessze be az ARL/Token-t:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
+  "Login": "Belépés",
+  "By using this program, you disagree with Deezer's ToS.": "Szoftwerünk használatával elutasítja a Deezer általános felhasználási feltételeit.",
   "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
+  "Search results for:": "Találatok:",
+  "Error loading data!": "Hiba az adatok betöltése közben!",
+  "Try again later!": "Kérjük próbálja meg később!",
+  "Search": "Keresés",
+  "Streaming Quality": "Streaming minősége",
+  "Download Quality": "Letöltés minősége",
+  "Downloads Directory": "Letöltések helye",
+  "Simultaneous downloads": "Egyidejű letöltések",
+  "Always show download confirm dialog before downloading.": "Mindig mutassa a letöltés elfogadása kérdést letöltések előtt.",
+  "Show download dialog": "Letöltés párbeszédpanel mutatása",
+  "Create folders for artists": "Mappa létrehozása az előadóhoz",
+  "Create folders for albums": "Mappa létrehozása az albumhoz",
+  "Download lyrics": "Lyrics letöltése",
+  "Variables": "Változók",
+  "UI": "Kezelőfelület",
   "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Integrations": "Integrációk",
+  "This allows listening history, flow and recommendations to work properly.": "Ezzel engedélyezi az előzményeket és, hogy a Flow illetve az ajánlások működjenek.",
+  "Log track listens to Deezer": "Dal előzmények rögzítése a Deezer számára",
+  "Connect your LastFM account to allow scrobbling.": "Csatlakozással LastFM fiókját, hogy engedélyezze az ajánlatokat.",
+  "Login with LastFM": "Belépés LastFM fiókkal",
+  "Disconnect LastFM": "LastFM fiók eltávolítása",
+  "Requires restart to apply!": "Újraindítás szükséges!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Discord Rich Presence engedélyezése, újraindítás szükséges!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Discord csatlakozás gomb engedélyezése dalok szinkronizálásához, újraindítás szükséges!",
+  "Discord Join Button": "Discord csatlakozás gomb",
+  "Other": "Egyebek",
+  "Minimize to tray": "Tálcára letétel",
+  "Don't minimize to tray": "Ne tegye le a tálcára",
+  "Close on exit": "Kilépés bezáráskor",
+  "Settings saved!": "Beállítások elmentve!",
   "Available only in Electron version!": "Available only in Electron version!",
-  "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Crossfade (ms)": "Átfedés (ms)",
+  "Select primary color": "Elsődleges szín kiválasztása",
+  "Light theme": "Világos kinézet",
+  "Create folders for playlists": "Mappa létrehozása a lejátszólistákhoz",
+  "About": "Info",
+  "Links:": "Linkek:",
+  "Telegram Releases": "Telegram Kiadások",
+  "Telegram Group": "Telegram csoport",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Telegram Android Group": "Telegram Android csoport",
+  "Credits:": "Köszönet:",
+  "Agree": "Elfogad",
+  "Dismiss": "Elutasít",
+  "Added to playlist!": "Lejátszó listához adva!",
+  "Added to library!": "Könyvtárból adva!",
+  "Removed from library!": "Eltávolítva a könyvtárból!",
+  "Removed from playlist!": "Eltávolítva a lejátszási listából!",
+  "Playlist deleted!": "Lejátszási lista törölve!",
+  "Delete": "Töröl",
+  "Are you sure you want to delete this playlist?": "Biztosan ki szeretné törölni a lejátszási listát?",
+  "Force white tray icon": "Fehér tálcaikon kényszerítése",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Alap (fehér) tálcaikon kényszerítése ha a kinézet hibásan lett észlelve. Újraindítás szükséges.",
+  "Share": "Megosztás",
+  "Settings quality": "Minőség",
+  "Content language": "Tartalom nyelve",
+  "Content country": "Tartalom országa",
+  "Website": "Weblap",
+  "Visit website": "Weblap megnyitása",
+  "New update available:": "Újabb frissítés elérhető:",
+  "Shuffle": "Keverés",
+  "Download album cover": "Album borító letöltése",
+  "Art Resolution": "Kép felbontása",
+  "Public": "Nyilvános",
+  "Private": "Privát",
+  "Collaborative": "Együttműködés",
+  "Edit playlist": "Lejátszó lista szerkesztése",
+  "Save": "Mentés",
+  "Edit": "Szerkesztés",
+  "Importer": "Importer",
+  "Enter URL": "Enter URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
+  "Import into playlist": "Import into playlist",
+  "Keep sidebar open": "Keep sidebar open",
+  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
+  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported."
 }
