--- a/app/client/src/locales/ko.json
+++ b/app/client/src/locales/ko.json
@@ -137,5 +137,21 @@
   "Content country": "콘텐츠 국가",
   "Website": "홈페이지",
   "Visit website": "홈페이지 방문하기",
-  "New update available:": "사용 가능한 업데이트가 있습니다:"
+  "New update available:": "사용 가능한 업데이트가 있습니다:",
+  "Shuffle": "Shuffle",
+  "Download album cover": "Download album cover",
+  "Art Resolution": "Art Resolution",
+  "Public": "Public",
+  "Private": "Private",
+  "Collaborative": "Collaborative",
+  "Edit playlist": "Edit playlist",
+  "Save": "Save",
+  "Edit": "Edit",
+  "Importer": "Importer",
+  "Enter URL": "Enter URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
+  "Import into playlist": "Import into playlist",
+  "Keep sidebar open": "Keep sidebar open",
+  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
+  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported."
 }
