--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -137,5 +137,21 @@
   "Content country": "País do conteúdo",
   "Website": "Site",
   "Visit website": "Visite o site",
-  "New update available:": "Nova atualização disponível:"
+  "New update available:": "Nova atualização disponível:",
+  "Shuffle": "Aleatório",
+  "Download album cover": "Baixar arte do álbum",
+  "Art Resolution": "Resolução da Arte",
+  "Public": "Pública",
+  "Private": "Privada",
+  "Collaborative": "Colaborativa",
+  "Edit playlist": "Editar playlist",
+  "Save": "Salvar",
+  "Edit": "Editar",
+  "Importer": "Importador",
+  "Enter URL": "Digite a URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Atualmente apenas o Spotify é suportado e limitado a 100 faixas.",
+  "Import into playlist": "Importar para playlist",
+  "Keep sidebar open": "Manter a barra lateral aberta",
+  "WARNING: Might require reload to work properly!": "AVISO: Pode ser necessário recarregar para funcionar corretamente!",
+  "An error occured, URL might be invalid or unsupported.": "Ocorreu um erro, a URL pode ser inválida ou não suportada."
 }
