--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -147,11 +147,20 @@
   "Edit playlist": "Playlist bearbeiten",
   "Save": "Speichern",
   "Edit": "Bearbeiten",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported."
+  "Importer": "Importierer",
+  "Enter URL": "URL eingeben",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Derzeit wird nur Spotify unterstützt und ist auf 100 Tracks beschränkt.",
+  "Import into playlist": "In Playlist importieren",
+  "Keep sidebar open": "Sidebar offen lassen",
+  "WARNING: Might require reload to work properly!": "WARNUNG: Eventuell muss neu geladen werden, um richtig zu funktionieren!",
+  "An error occured, URL might be invalid or unsupported.": "Ein Fehler ist aufgetreten, die URL ist ungültig oder wird nicht unterstützt.",
+  "Top tracks": "Top tracks",
+  "Show all top tracks": "Show all top tracks",
+  "Singles": "Singles",
+  "Album:": "Album:",
+  "Artists:": "Artists:",
+  "Yes": "Yes",
+  "No": "No",
+  "Download Filename": "Download Filename",
+  "Language": "Language"
 }
