--- a/app/client/src/locales/hu.json
+++ b/app/client/src/locales/hu.json
@@ -91,7 +91,7 @@
   "Download lyrics": "Lyrics letöltése",
   "Variables": "Változók",
   "UI": "Kezelőfelület",
-  "Show autocomplete in search": "Show autocomplete in search",
+  "Show autocomplete in search": "Autómat kiegészítő mutatása kereséskor",
   "Integrations": "Integrációk",
   "This allows listening history, flow and recommendations to work properly.": "Ezzel engedélyezi az előzményeket és, hogy a Flow illetve az ajánlások működjenek.",
   "Log track listens to Deezer": "Dal előzmények rögzítése a Deezer számára",
@@ -148,10 +148,19 @@
   "Save": "Mentés",
   "Edit": "Szerkesztés",
   "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported."
+  "Enter URL": "Írjon be egy URL-t",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Jelenleg csak Spotify támogatott és 100 zeneszámra le van korlátozva.",
+  "Import into playlist": "Importálás a lejátszási listába",
+  "Keep sidebar open": "Oldalsó sáv nyitva tartása",
+  "WARNING: Might require reload to work properly!": "Figyelem: Lehetséges hogy újra kell indítani az alkalmazást ahhoz hogy tökéletesen működjön!",
+  "An error occured, URL might be invalid or unsupported.": "Egy hiba történet: a megadott URL érvénytelen lehet vagy nem támogatott.",
+  "Top tracks": "Top tracks",
+  "Show all top tracks": "Show all top tracks",
+  "Singles": "Singles",
+  "Album:": "Album:",
+  "Artists:": "Artists:",
+  "Yes": "Yes",
+  "No": "No",
+  "Download Filename": "Download Filename",
+  "Language": "Language"
 }
