--- a/app/client/src/locales/id.json
+++ b/app/client/src/locales/id.json
@@ -153,5 +153,14 @@
   "Import into playlist": "Import into playlist",
   "Keep sidebar open": "Keep sidebar open",
   "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported."
+  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
+  "Top tracks": "Top tracks",
+  "Show all top tracks": "Show all top tracks",
+  "Singles": "Singles",
+  "Album:": "Album:",
+  "Artists:": "Artists:",
+  "Yes": "Yes",
+  "No": "No",
+  "Download Filename": "Download Filename",
+  "Language": "Language"
 }
