--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -150,8 +150,17 @@
   "Importer": "Importador",
   "Enter URL": "Digite a URL",
   "Currently only Spotify is supported and limited to 100 tracks.": "Atualmente apenas o Spotify é suportado e limitado a 100 faixas.",
-  "Import into playlist": "Importar para playlist",
+  "Import into playlist": "Importar para a playlist",
   "Keep sidebar open": "Manter a barra lateral aberta",
   "WARNING: Might require reload to work properly!": "AVISO: Pode ser necessário recarregar para funcionar corretamente!",
-  "An error occured, URL might be invalid or unsupported.": "Ocorreu um erro, a URL pode ser inválida ou não suportada."
+  "An error occured, URL might be invalid or unsupported.": "Ocorreu um erro, a URL pode ser inválida ou não suportada.",
+  "Top tracks": "Top tracks",
+  "Show all top tracks": "Show all top tracks",
+  "Singles": "Singles",
+  "Album:": "Album:",
+  "Artists:": "Artists:",
+  "Yes": "Yes",
+  "No": "No",
+  "Download Filename": "Download Filename",
+  "Language": "Language"
 }
