--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -153,5 +153,14 @@
   "Import into playlist": "Импортировать в плейлист",
   "Keep sidebar open": "Не закрывать боковое меню",
   "WARNING: Might require reload to work properly!": "Внимание! Может потребоваться перезапуск для правильной работы.",
-  "An error occured, URL might be invalid or unsupported.": "Ошибка, URL недействителен или не поддерживается."
+  "An error occured, URL might be invalid or unsupported.": "Ошибка, URL недействителен или не поддерживается.",
+  "Top tracks": "Top tracks",
+  "Show all top tracks": "Show all top tracks",
+  "Singles": "Singles",
+  "Album:": "Album:",
+  "Artists:": "Artists:",
+  "Yes": "Yes",
+  "No": "No",
+  "Download Filename": "Download Filename",
+  "Language": "Language"
 }
