--- a/app/client/src/locales/vi.json
+++ b/app/client/src/locales/vi.json
@@ -153,5 +153,14 @@
   "Import into playlist": "Nhập vào danh sách phát",
   "Keep sidebar open": "Giữ thanh bên luôn mở",
   "WARNING: Might require reload to work properly!": "CẢNH BÁO: Có thể phải tải lại để hoạt động bình thường!",
-  "An error occured, URL might be invalid or unsupported.": "Lỗi, URL sai hoặc không được hỗ trợ."
+  "An error occured, URL might be invalid or unsupported.": "Lỗi, URL sai hoặc không được hỗ trợ.",
+  "Top tracks": "Top tracks",
+  "Show all top tracks": "Show all top tracks",
+  "Singles": "Singles",
+  "Album:": "Album:",
+  "Artists:": "Artists:",
+  "Yes": "Yes",
+  "No": "No",
+  "Download Filename": "Download Filename",
+  "Language": "Language"
 }
